Fix php fpm session security issue
For a given client but different php fpm pools, php fpm creates session data
file with the same name.
If a different session directories for different pools is not specified,
two different pools could share the same session data, which is obviously
a major security issue.
This fix specifies a dedicated session directory for each php fpm pool.
A specific pool is also specified for phpmyadmin.

This fix also restricts the open_basedir parameter to the project directory
for each php fpm pool.

The removal of the session directories is also taken care of.

--- a/phpmyadmin-pool.conf
+++ b/phpmyadmin-pool.conf
@@ -1,7 +1,7 @@
 ; Start a new pool named 'www'.
 ; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
-[{vhost_directory}]
+[phpmyadmin]
 
 ; Per pool prefix
 ; It only applies on the following directives:
@@ -114,7 +114,7 @@ pm.max_children = 5
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
-; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
+; Default Value: (min_spare_servers + max_spare_servers) / 2
 pm.start_servers = 2
 
 ; The desired minimum number of idle server processes.
@@ -339,6 +339,14 @@ pm.max_spare_servers = 3
 ; Default Value: 0
 ;request_terminate_timeout = 0
 
+; The timeout set by 'request_terminate_timeout' ini option is not engaged after
+; application calls 'fastcgi_finish_request' or when application has finished and
+; shutdown functions are being called (registered via register_shutdown_function).
+; This option will enable timeout limit to be applied unconditionally
+; even in such cases.
+; Default Value: no
+;request_terminate_timeout_track_finished = no
+
 ; Set open file descriptor rlimit.
 ; Default Value: system defined value
 ;rlimit_files = 1024
@@ -428,5 +436,11 @@ pm.max_spare_servers = 3
 php_admin_value[error_log] = /var/log/fpm-php.$pool.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
-php_admin_value[open_basedir] = /home/popschool/projects/$pool
+; php_admin_value[open_basedir] = 
 php_admin_value[session.save_path] = /var/lib/php/sessions/$pool
+
+; values copied and adapted from [https://www.digitalocean.com/community/tutorials/how-to-install-phpmyadmin-from-source-debian-10](https://www.digitalocean.com/community/tutorials/how-to-install-phpmyadmin-from-source-debian-10)
+php_value[include_path] = .
+php_admin_value[upload_tmp_dir] = /var/lib/phpmyadmin/tmp
+php_admin_value[open_basedir] = /usr/share/phpmyadmin/:/etc/phpmyadmin/:/var/lib/phpmyadmin/:/usr/share/javascript/
+php_admin_value[mbstring.func_overload] = 0
