--- a/phpmyadmin-apache2.conf
+++ b/phpmyadmin-apache2.conf
@@ -9,10 +9,11 @@ Alias /{pma_subdirectory} /usr/share/phpmyadmin
     AuthUserFile /etc/phpmyadmin/htpasswd.login
     Require valid-user
 
-    SetEnv PHP_VALUE "include_path = ."
-    SetEnv PHP_ADMIN_VALUE "upload_tmp_dir = /var/lib/phpmyadmin/tmp"
-    SetEnv PHP_ADMIN_VALUE "open_basedir = /usr/share/phpmyadmin/:/etc/phpmyadmin/:/var/lib/phpmyadmin/:/usr/share/php/php-gettext/:/usr/share/php/php-php-gettext/:/usr/share/javascript/:/usr/share/php/tcpdf/:/usr/share/doc/phpmyadmin/:/usr/share/php/phpseclib/"
-    SetEnv PHP_ADMIN_VALUE "mbstring.func_overload = 0"
+    <IfModule proxy_fcgi_module>
+    <FilesMatch ".+\.ph(ar|p|tml)$">
+	SetHandler "proxy:unix:/run/php/php7.4-fpm.phpmyadmin.sock|fcgi://localhost"
+    </FilesMatch>
+    </IfModule>
 </Directory>
 
 <Directory /usr/share/phpmyadmin/templates>
